--- a/examples/Zerynth_App_TOI/template.html
+++ b/examples/Zerynth_App_TOI/template.html
@@ -1,21 +1,21 @@
 <html>
     <head>
-        <viper/>
-        <viper-jquery/>
-        <viper-jquery-mobile/>
+        <zerynth/>
+        <zerynth-jquery/>
+        <zerynth-jquery-mobile/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>        
     <body>
         <div data-role="page">
             <div data-role="header"><h1>TOI Shield</h1></div>
             <div role="main" class="ui-content" style="text-align:center">
-                <button class="ui-btn ui-btn-inline" onclick="ViperApp.call('buzzer')">Buzz!</button>
+                <button class="ui-btn ui-btn-inline" onclick="ZerynthApp.call('buzzer')">Buzz!</button>
                 <p id="light"></p>
                 <p id="temperature"></p>
                 <p id="sound"></p>
                 <p id="touch"></p>
             </div>
-            <div data-role="footer">Powered by Viper</div>
+            <div data-role="footer">Powered by Zerynth</div>
         </div>
         <script>
             function update_labels(args){
@@ -24,8 +24,8 @@
                 $("#temperature").text("Temperature is: "+args[2]+" degrees")
                 $("#touch").text((args[3])?("Touched!"):("Touch me!"))
             }
-            ViperApp.listen("data",update_labels)
-            ViperApp.jquerymobile_scalecontent()
+            ZerynthApp.listen("data",update_labels)
+            ZerynthApp.jquerymobile_scalecontent()
         </script>
     </body>
 </html>
